--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ user.name }}'s Watchlist</title>
-    {# 添加Favicon #}
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    {# 引入 CSS 文件 #}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
-</head>
-<body>
-    <h2>
-        <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}">
-        {{ user.name }}'s Watchlist
-    </h2>
-    {# 使用 length 过滤器获取 movies 变量的长度 #}
-    <p>{{ movies|length }} Titles</p>
-    <ul class="movie-list">
-        {% for movie in movies %}   {# 迭代 movies 变量 #}
-        <li>{{ movie.title }} - {{ movie.year }}</li> {# 等同于 movie['title'] #}
-        {% endfor %}    {# 使用 endfor 标签结束 for 语句 #}
-    </ul>
-    <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}">
-    <footer>
-        <small>$copy 2022 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
-    </footer>
-</body>
-</html>
+{#继承基模板的主页模板#}
+{#扩展自模板 base.html#}
+{% extends 'base.html' %}
+
+{#这里的内容会插入到基模板中 content 块的位置#}
+{% block content %}
+<p>{{ movies|length }} Titles</p>
+<ul class="movie-list">
+    {% for movie in movies %}
+    <li>{{ movie.title }} - {{ movie.year }}
+        <span class="float-right">
+            <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
+        </span>
+    </li>
+    {% endfor %}
+</ul>
+<img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}" title="to~to~ro~">
+{% endblock %}
